AC_INIT(libf77xml/f77interface.c)

VERSION=1.0.0
PACKAGE=libf77xml
F77XML_VERSION_INFO=`echo $VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`
AC_SUBST(F77XML_VERSION_INFO)

AM_INIT_AUTOMAKE($PACKAGE,$VERSION,no-define)
AM_CONFIG_HEADER(config.h)

AH_TEMPLATE([DEBUG],[enable debugging])

AC_PROG_FC([f90 ifort xlf90 pgf90 epcf90 f95 fort xlf95 lf95 g95])
dnl AC_LANG_PUSH([Fortran])
dnl AC_FC_SRCEXT(f90)
dnl AC_LANG_POP
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_ARG_ENABLE(debug,
	      [ --enable-debug        Specify if you want to enable debug],
	      DEBUG_ENABLED=yes
)

GDOME2_PREFIX="NOTGIVEN"
AC_ARG_WITH(libgdome2-prefix,
	      [ --with-libgdome2-prefix=[prefix]      Prefix for libgdome2],
	      GDOME2_PREFIX=$withval
)


if test "x$DEBUG_ENABLED" = "xyes"
then
	AC_DEFINE(DEBUG)
fi

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADERS([malloc.h])
AC_C_CONST
dnl Checks for library functions.
AC_CHECK_FUNCS([strdup])
AC_CHECK_FUNCS([bzero])
AC_CHECK_FUNCS([memchr])
AC_CHECK_FUNCS([memmove])
AC_CHECK_FUNCS([memset])
AC_FUNC_MALLOC

GDOME2_MIN_VERSION=0.8.1
AC_SUBST(GDOME2_MIN_VERSION)

if test "$GDOME2_PREFIX" != "NOTGIVEN"
then
	GDOME2_CONFIG=${GDOME2_PREFIX}/bin/gdome-config
	AC_CHECK_FILE([${GDOME2_CONFIG}],
				[],
				AC_MSG_ERROR([Unable to find gdome-config])
	)
    GDOME2_LIBS="`$GDOME2_CONFIG --libs`"
    GDOME2_CFLAGS="`$GDOME2_CONFIG --cflags`"
	AC_SUBST(GDOME2_CFLAGS)
	AC_SUBST(GDOME2_LIBS)
else
	GDOME2_DEFS(gdome2 >= $GDOME2_MIN_VERSION)
fi



AC_MSG_CHECKING(for a random number)
sleep 2
AC_MSG_RESULT(42)


AC_OUTPUT([
Makefile
libf77xml/Makefile
examples/Makefile
tools/Makefile
docs/Makefile
f77xml.pc
])
